# wiros_processing_node

./: .gitignore  CMakeLists.txt  README.md  antennas.md  package.xml  requirements.txt  setup.py
examples/forward_localization/: localize.py  localize.py~  pred_gnd_aoa.npz
examples/forward_localization/gnd/: gnd_149.npz  gnd_151.npz  gnd_225.npz  gnd_227.npz
examples/forward_localization/pred/: 149-synced_aoa.npz  151-synced_aoa.npz  225-synced_aoa.npz  227-synced_aoa.npz
launch/: aoa_only.launch  aoa_svd.launch  basic.launch  runRqt_image_view.sh  visualize_profiles.launch
meshes/: ap_simple.stl
rviz/: visualizer.rviz
scripts/: aoa_node.py  bag2mat.py  bearing_testing.py  dynamic_compensation.py  generate_channel_files.py  generate_simple_compensation.py  generate_static_compensation.py
src/csi_utils/: aoa_node_main.py  comp_utils.py  constants.py  io_utils.py  pipeline_utils.py  transform_utils.py
srv/: SaveChannel.srv
